--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "resume-tutorial-vite",
+  "name": "kwik-api-tutorial-resume",
   "private": false,
   "version": "1.0.0",
   "type": "module",
@@ -11,10 +11,16 @@
   },
   "dependencies": {
     "@apollo/client": "^3.8.3",
+    "@heroicons/react": "^2.0.18",
+    "autoprefixer": "^10.4.15",
+    "chartist": "^1.3.0",
+    "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
     "graphql": "^16.8.0",
+    "postcss": "^8.4.29",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
